# image-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/imgtool/: __init__.py  cli.py  core.py  discovery.py
tests/: conftest.py  test_core.py  test_discovery.py
